[package]
name = "tcptotcphttp-endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tcptotcp = "0.0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
